--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
             "Pogudin\\": "src/"
         }
     },
-    "require-dev": {
+    "require": {
         "php": ">=7.1.0",
         "phpunit/phpunit": "^7.0"
     }
